--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ classifiers = [
 ]
 dependencies = [
     "scapy>=2.5.0",
+    "flask>=3.0.0",
+    "numpy>=1.24.0",
+    "scikit-learn>=1.3.0",
 ]
 
 [project.urls]
